--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,5 +1,6 @@
 /* Make footer full bleed */
+@import '/src/index.css';
 
 footer {
-  grid-template-columns: 1fr calc(100% - 48rem) 1fr;
+  width: 100vh;
 }
