--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   /* Color palette */
   --black: #121212; 
@@ -32,20 +37,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-footer {
-  grid-template-columns: 1fr calc(100% - 48rem) 1fr;
-}
-
 html, body, #app, #app>div {
-  min-height: 100%;
-  min-width: 100%;
+  width: auto;
+  height: auto;
+  margin: 0;
 }
 
 body {
-  margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  min-width: 200vh; /* so the body extends the full width of the page */
   min-height: 100vh;
 }
 
@@ -80,17 +80,18 @@ body {
 
 @keyframes collapseDown {
   0% {
-    display: block;
-    height: 0px; 
+    overflow: hidden;
+    transform: scaleY(0%);
+    height: 0%;
   }
   100% {
-    height: 100px;
-    background-color: var(--red-light);
+    transform: scaleY(100%);
+    height: 100%;
   }
 }
 
 .collapseDown {
-  animation: collapseUp 5s linear ease-in-out;
+  animation: collapseDown 5s linear ease-in-out;
 }
 
 @keyframes collapseUp {
