--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,6 +1,16 @@
 /* Make footer full bleed */
 @import '/src/index.css';
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.wrapper > * {
+  flex: 1;
+}
+
 footer {
   width: 100vh;
 }
