--- a/src/index.css
+++ b/src/index.css
@@ -45,8 +45,8 @@ html, body, #app, #app>div {
 
 body {
   display: flex;
-  min-width: 200vh; /* so the body extends the full width of the page */
-  min-height: 100vh;
+  min-width: 100vw; /* so the body extends almost the full width of the page */
+  min-height: 100%;
 }
 
 @media (prefers-color-scheme: light) {
@@ -64,9 +64,9 @@ body {
 
 @keyframes autoscrollX {
   0% {
-    transform: translateX(0);
+    transform: translateX(0%);
   }
-  2% {
+  5% {
     transform: translateX(0%);
   }
   100% {
@@ -81,24 +81,30 @@ body {
 @keyframes collapseDown {
   0% {
     overflow: hidden;
-    transform: scaleY(0%);
-    height: 0%;
+    max-height: 0px;
   }
   100% {
     transform: scaleY(100%);
-    height: 100%;
+    max-height: 400px;
   }
 }
 
 .collapseDown {
-  animation: collapseDown 5s linear ease-in-out;
+  animation: collapseDown 2s linear ease-in-out;
 }
 
 @keyframes collapseUp {
   0% {
-    max-height: 0%; 
+    overflow: hidden;
+    max-height: 400px;
   }
   100% {
-    max-height: 100%;
+    transform: scaleY(0%);
+    max-height: 0px;
+    display: hidden;
   }
+}
+
+.collapseUp {
+  animation: collapseUp 2s linear ease-in-out;
 }
