--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,18 @@ body {
 .collapseUp {
   animation: collapseUp 2s linear ease-in-out;
 }
+
+@keyframes collapseLeft {
+  0% {
+    overflow: hidden;
+    max-width: 100px;
+  }
+  100% {
+    transform: scaleY(100%);
+    max-width: 100%;
+  }
+}
+
+.collapseLeft {
+  animation: collapseLeft 2s linear ease-in-out;
+}
