--- a/src/index.css
+++ b/src/index.css
@@ -156,3 +156,16 @@ body {
     background-color: var(--white);
   }
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation: fadeIn 2s linear;
+}
